# compa

./: .gitignore  Cargo.toml  build.rs
src/: app.rs  main.rs  theme.rs  ui.rs
src/diff/: folder.rs  mod.rs
