[package]
name = "compa"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[profile.release]
lto = true
strip = true
debug = false
incremental = false
codegen-units = 1
opt-level = "z"
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = {version = "0.4.8"}
rfd = "0.14.1"

[build-dependencies]
static_vcruntime = "2.0"
